chore: Improve UI cosmetic

--- a/public/events.html
+++ b/public/events.html
@@ -310,35 +310,19 @@
                         <div class="col-lg-2 col-md-6 col-12">
                             <!-- Single Widget -->
                             <div class="single-footer f-link">
-                                <h3>Quick Links</h3>
+                                <h3 class="text-white">Quick Links</h3>
                                 <ul>
-                                    <li><a href="javascript:void(0)">Get Direction</a></li>
-                                    <li><a href="javascript:void(0)">Sponsor</a></li>
-                                    <li><a href="javascript:void(0)">What We Offer</a></li>
-                                    <li><a href="javascript:void(0)">Ricent Projects</a></li>
-                                    <li><a href="javascript:void(0)">Insights</a></li>
+                                    <li><a href="./index.html">Home</a></li>
+                                    <li><a href="#">Events</a></li>
+                                    <li><a href="./create.html">Create Event</a></li>
                                 </ul>
                             </div>
                             <!-- End Single Widget -->
                         </div>
-                        <div class="col-lg-2 col-md-6 col-12">
-                            <!-- Single Widget -->
-                            <div class="single-footer f-link">
-                                <h3>Know More</h3>
-                                <ul>
-                                    <li><a href="#">About Us</a></li>
-                                    <li><a href="#">Our Pricing</a></li>
-                                    <li><a href="#">Faq</a></li>
-                                    <li><a href="#">Guides</a></li>
-                                    <li><a href="#">Contact Us</a></li>
-                                </ul>
-                            </div>
-                            <!-- End Single Widget -->
-                        </div>
-                        <div class="col-lg-4 col-md-6 col-12">
+                        <div class="col-lg-6 col-md-6 col-12">
                             <!-- Single Widget -->
                             <div class="single-footer newsletter">
-                                <h3>Subscribe to our newsletter</h3>
+                                <h3 class="text-white">Subscribe to our newsletter</h3>
                                 <form action="#" method="get" target="_blank" class="newsletter-form">
                                     <input name="name" placeholder="Your Name*" required="required" type="text">
                                     <input name="email" placeholder="Email address*" required="required" type="email">
