--- a/public/index.html
+++ b/public/index.html
@@ -218,132 +218,6 @@
                 </div>
             </div>
             <div class="row row-cols-1 row-cols-md-3 g-4" id="popular-events">
-                <!-- <div class="col wow fadeInLeft" data-wow-delay=".2s">
-                    <div class="card">
-                        <div class="star">
-                            <i class="bi bi-star"></i>
-                        </div>
-                        <div class="overlay">
-                            <img src="assets/images/events/event-1.png" class="card-img-top" alt="...">
-                            <div class="desc">
-                                Travel & Adventure
-                            </div>
-                        </div>
-                        <div class="d-flex">
-                            <div class="card-body w-25">
-                                <h5 class="card-title text-center">NOV</h5>
-                                <h5 class="card-text text-center">25-26</h5>
-                            </div>
-                            <div class="card-body ps-0 w-75">
-                                <h5 class="card-title">Card title</h5>
-                                <p class="card-text fw-bold">This is a longer card with supporting text below as a
-                                    natural</p>
-                                <p class="card-text">8:30 AM - 7:30 PM</p>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-                <div class="col wow fadeInLeft" data-wow-delay=".2s">
-                    <div class="card">
-                        <div class="star">
-                            <i class="bi bi-star"></i>
-                        </div>
-                        <div class="overlay">
-                            <img src="assets/images/events/event-2.png" class="card-img-top" alt="...">
-                            <div class="desc">
-                                Entertainment
-                            </div>
-                        </div>
-                        <div class="card-body">
-                            <h5 class="card-title">Card title</h5>
-                            <p class="card-text">This is a longer card with supporting text below as a natural lead-in
-                                to additional
-                                content. This content is a little bit longer.</p>
-                        </div>
-                    </div>
-                </div>
-                <div class="col wow fadeInLeft" data-wow-delay=".2s">
-                    <div class="card">
-                        <div class="star">
-                            <i class="bi bi-star"></i>
-                        </div>
-                        <div class="overlay">
-                            <img src="assets/images/events/event-3.png" class="card-img-top" alt="...">
-                            <div class="desc">
-                                Sports & Fitness
-                            </div>
-                        </div>
-                        <div class="card-body">
-                            <h5 class="card-title">Card title</h5>
-                            <p class="card-text">This is a longer card with supporting text below as a natural lead-in
-                                to additional
-                                content.</p>
-                        </div>
-                    </div>
-                </div>
-                <div class="col wow fadeInRight" data-wow-delay=".2s">
-                    <div class="card">
-                        <div class="star">
-                            <i class="bi bi-star"></i>
-                        </div>
-                        <div class="overlay">
-                            <img src="assets/images/events/event-1.png" class="card-img-top" alt="...">
-                            <div class="desc">
-                                Travel & Adventure
-                            </div>
-                        </div>
-                        <div class="d-flex">
-                            <div class="card-body w-25">
-                                <h5 class="card-title text-center">NOV</h5>
-                                <h5 class="card-text text-center">25-26</h5>
-                            </div>
-                            <div class="card-body ps-0 w-75">
-                                <h5 class="card-title">Card title</h5>
-                                <p class="card-text fw-bold">This is a longer card with supporting text below as a
-                                    natural</p>
-                                <p class="card-text">8:30 AM - 7:30 PM</p>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-                <div class="col wow fadeInRight" data-wow-delay=".2s">
-                    <div class="card">
-                        <div class="star">
-                            <i class="bi bi-star"></i>
-                        </div>
-                        <div class="overlay">
-                            <img src="assets/images/events/event-2.png" class="card-img-top" alt="...">
-                            <div class="desc">
-                                Entertainment
-                            </div>
-                        </div>
-                        <div class="card-body">
-                            <h5 class="card-title">Card title</h5>
-                            <p class="card-text">This is a longer card with supporting text below as a natural lead-in
-                                to additional
-                                content. This content is a little bit longer.</p>
-                        </div>
-                    </div>
-                </div>
-                <div class="col wow fadeInRight" data-wow-delay=".2s">
-                    <div class="card">
-                        <div class="star">
-                            <i class="bi bi-star"></i>
-                        </div>
-                        <div class="overlay">
-                            <img src="assets/images/events/event-3.png" class="card-img-top" alt="...">
-                            <div class="desc">
-                                Sports & Fitness
-                            </div>
-                        </div>
-                        <div class="card-body">
-                            <h5 class="card-title">Card title</h5>
-                            <p class="card-text">This is a longer card with supporting text below as a natural lead-in
-                                to additional
-                                content.</p>
-                        </div>
-                    </div>
-                </div> -->
             </div>
         </div>
     </section>
@@ -390,132 +264,6 @@
                 </div>
             </div>
             <div class="row row-cols-1 row-cols-md-3 g-4" id="trending-events">
-                <!-- <div class="col wow fadeInLeft" data-wow-delay=".2s">
-                    <div class="card">
-                        <div class="star">
-                            <i class="bi bi-star"></i>
-                        </div>
-                        <div class="overlay">
-                            <img src="assets/images/events/event-1.png" class="card-img-top" alt="...">
-                            <div class="desc">
-                                Travel & Adventure
-                            </div>
-                        </div>
-                        <div class="d-flex">
-                            <div class="card-body w-25">
-                                <h5 class="card-title text-center">NOV</h5>
-                                <h5 class="card-text text-center">25-26</h5>
-                            </div>
-                            <div class="card-body ps-0 w-75">
-                                <h5 class="card-title">Card title</h5>
-                                <p class="card-text fw-bold">This is a longer card with supporting text below as a
-                                    natural</p>
-                                <p class="card-text">8:30 AM - 7:30 PM</p>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-                <div class="col wow fadeInLeft" data-wow-delay=".2s">
-                    <div class="card">
-                        <div class="star">
-                            <i class="bi bi-star"></i>
-                        </div>
-                        <div class="overlay">
-                            <img src="assets/images/events/event-2.png" class="card-img-top" alt="...">
-                            <div class="desc">
-                                Entertainment
-                            </div>
-                        </div>
-                        <div class="card-body">
-                            <h5 class="card-title">Card title</h5>
-                            <p class="card-text">This is a longer card with supporting text below as a natural lead-in
-                                to additional
-                                content. This content is a little bit longer.</p>
-                        </div>
-                    </div>
-                </div>
-                <div class="col wow fadeInLeft" data-wow-delay=".2s">
-                    <div class="card">
-                        <div class="star">
-                            <i class="bi bi-star"></i>
-                        </div>
-                        <div class="overlay">
-                            <img src="assets/images/events/event-3.png" class="card-img-top" alt="...">
-                            <div class="desc">
-                                Sports & Fitness
-                            </div>
-                        </div>
-                        <div class="card-body">
-                            <h5 class="card-title">Card title</h5>
-                            <p class="card-text">This is a longer card with supporting text below as a natural lead-in
-                                to additional
-                                content.</p>
-                        </div>
-                    </div>
-                </div>
-                <div class="col wow fadeInRight" data-wow-delay=".2s">
-                    <div class="card">
-                        <div class="star">
-                            <i class="bi bi-star"></i>
-                        </div>
-                        <div class="overlay">
-                            <img src="assets/images/events/event-1.png" class="card-img-top" alt="...">
-                            <div class="desc">
-                                Travel & Adventure
-                            </div>
-                        </div>
-                        <div class="d-flex">
-                            <div class="card-body w-25">
-                                <h5 class="card-title text-center">NOV</h5>
-                                <h5 class="card-text text-center">25-26</h5>
-                            </div>
-                            <div class="card-body ps-0 w-75">
-                                <h5 class="card-title">Card title</h5>
-                                <p class="card-text fw-bold">This is a longer card with supporting text below as a
-                                    natural</p>
-                                <p class="card-text">8:30 AM - 7:30 PM</p>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-                <div class="col wow fadeInRight" data-wow-delay=".2s">
-                    <div class="card">
-                        <div class="star">
-                            <i class="bi bi-star"></i>
-                        </div>
-                        <div class="overlay">
-                            <img src="assets/images/events/event-2.png" class="card-img-top" alt="...">
-                            <div class="desc">
-                                Entertainment
-                            </div>
-                        </div>
-                        <div class="card-body">
-                            <h5 class="card-title">Card title</h5>
-                            <p class="card-text">This is a longer card with supporting text below as a natural lead-in
-                                to additional
-                                content. This content is a little bit longer.</p>
-                        </div>
-                    </div>
-                </div>
-                <div class="col wow fadeInRight" data-wow-delay=".2s">
-                    <div class="card">
-                        <div class="star">
-                            <i class="bi bi-star"></i>
-                        </div>
-                        <div class="overlay">
-                            <img src="assets/images/events/event-3.png" class="card-img-top" alt="...">
-                            <div class="desc">
-                                Sports & Fitness
-                            </div>
-                        </div>
-                        <div class="card-body">
-                            <h5 class="card-title">Card title</h5>
-                            <p class="card-text">This is a longer card with supporting text below as a natural lead-in
-                                to additional
-                                content.</p>
-                        </div>
-                    </div>
-                </div> -->
             </div>
         </div>
     </section>
@@ -569,30 +317,14 @@
                             <div class="single-footer f-link">
                                 <h3>Quick Links</h3>
                                 <ul>
-                                    <li><a href="javascript:void(0)">Get Direction</a></li>
-                                    <li><a href="javascript:void(0)">Sponsor</a></li>
-                                    <li><a href="javascript:void(0)">What We Offer</a></li>
-                                    <li><a href="javascript:void(0)">Ricent Projects</a></li>
-                                    <li><a href="javascript:void(0)">Insights</a></li>
+                                    <li><a href="#">Home</a></li>
+                                    <li><a href="./events.html">Events</a></li>
+                                    <li><a href="./create.html">Create Event</a></li>
                                 </ul>
                             </div>
                             <!-- End Single Widget -->
                         </div>
-                        <div class="col-lg-2 col-md-6 col-12">
-                            <!-- Single Widget -->
-                            <div class="single-footer f-link">
-                                <h3>Know More</h3>
-                                <ul>
-                                    <li><a href="javascript:void(0)">About Us</a></li>
-                                    <li><a href="javascript:void(0)">Our Pricing</a></li>
-                                    <li><a href="javascript:void(0)">Faq</a></li>
-                                    <li><a href="javascript:void(0)">Guides</a></li>
-                                    <li><a href="javascript:void(0)">Contact Us</a></li>
-                                </ul>
-                            </div>
-                            <!-- End Single Widget -->
-                        </div>
-                        <div class="col-lg-4 col-md-6 col-12">
+                        <div class="col-lg-6 col-md-6 col-12">
                             <!-- Single Widget -->
                             <div class="single-footer newsletter">
                                 <h3>Subscribe to our newsletter</h3>
