--- a/public/detail.html
+++ b/public/detail.html
@@ -287,30 +287,14 @@
                             <div class="single-footer f-link">
                                 <h3>Quick Links</h3>
                                 <ul>
-                                    <li><a href="javascript:void(0)">Get Direction</a></li>
-                                    <li><a href="javascript:void(0)">Sponsor</a></li>
-                                    <li><a href="javascript:void(0)">What We Offer</a></li>
-                                    <li><a href="javascript:void(0)">Ricent Projects</a></li>
-                                    <li><a href="javascript:void(0)">Insights</a></li>
+                                    <li><a href="./index.html">Home</a></li>
+                                    <li><a href="./events.html">Events</a></li>
+                                    <li><a href="./create.html">Create Event</a></li>
                                 </ul>
                             </div>
                             <!-- End Single Widget -->
                         </div>
-                        <div class="col-lg-2 col-md-6 col-12">
-                            <!-- Single Widget -->
-                            <div class="single-footer f-link">
-                                <h3>Know More</h3>
-                                <ul>
-                                    <li><a href="javascript:void(0)">About Us</a></li>
-                                    <li><a href="javascript:void(0)">Our Pricing</a></li>
-                                    <li><a href="javascript:void(0)">Faq</a></li>
-                                    <li><a href="javascript:void(0)">Guides</a></li>
-                                    <li><a href="javascript:void(0)">Contact Us</a></li>
-                                </ul>
-                            </div>
-                            <!-- End Single Widget -->
-                        </div>
-                        <div class="col-lg-4 col-md-6 col-12">
+                        <div class="col-lg-6 col-md-6 col-12">
                             <!-- Single Widget -->
                             <div class="single-footer newsletter">
                                 <h3>Subscribe to our newsletter</h3>
